--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,17 @@
-flask
-flask-sqlalchemy
+Flask==3.0.0
+Flask-SQLAlchemy==3.1.1
+Flask-Migrate==4.0.5
+Flask-Cors==4.0.0
+python-dotenv==1.0.0
+PyJWT==2.8.0
+Werkzeug==3.0.1
+SQLAlchemy==2.0.23
+alembic==1.13.0
+python-jose==3.3.0
+requests==2.31.0
+google-generativeai==0.3.2
+langchain==0.1.5
+sentence-transformers==2.5.1
 flask-migrate
 flask-cors
 python-dotenv
