--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ PyJWT==2.8.0
 Werkzeug==3.0.1
 SQLAlchemy==2.0.23
 alembic==1.13.0
+psycopg2-binary==2.9.9
 python-jose==3.3.0
 requests==2.31.0
 google-generativeai==0.3.2
