--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,101 @@
-Flask==3.0.0
+alembic==1.16.1
+annotated-types==0.7.0
+asttokens==3.0.0
+bcrypt==4.3.0
+blinker==1.9.0
+cachetools==5.5.2
+certifi==2025.4.26
+cffi==1.17.1
+charset-normalizer==3.4.2
+click==8.2.1
+colorama==0.4.6
+contourpy==1.3.2
+cryptography==45.0.3
+cycler==0.12.1
+decorator==5.2.1
+dnspython==2.7.0
+email_validator==2.2.0
+executing==2.2.0
+filelock==3.18.0
+Flask==3.1.1
+flask-cors==6.0.0
+Flask-JWT-Extended==4.7.1
+Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
-Flask-Migrate==4.0.5
-Flask-Cors==4.0.0
-python-dotenv==1.0.0
-PyJWT==2.8.0
-Werkzeug==3.0.1
-SQLAlchemy==2.0.23
-alembic==1.13.0
-psycopg2-binary==2.9.9
-python-jose==3.3.0
-requests==2.31.0
-google-generativeai==0.3.2
-langchain==0.1.5
-sentence-transformers==2.5.1
-flask-migrate
-flask-cors
-python-dotenv
-pyjwt
-bcrypt
-email-validator
-google-generativeai
-pdfplumber
-sentence-transformers
-matplotlib
-numpy
-ipython
-torch
-torchvision
-torchaudio
-gunicorn==21.2.0
+fonttools==4.58.1
+fsspec==2025.5.1
+google-ai-generativelanguage==0.6.15
+google-api-core==2.25.0
+google-api-python-client==2.171.0
+google-auth==2.40.3
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.5
+googleapis-common-protos==1.70.0
+greenlet==3.2.3
+grpcio==1.72.1
+grpcio-status==1.71.0
+httplib2==0.22.0
+huggingface-hub==0.32.4
+idna==3.10
+ipython==9.3.0
+ipython_pygments_lexers==1.1.1
+itsdangerous==2.2.0
+jedi==0.19.2
+Jinja2==3.1.6
+joblib==1.5.1
+kiwisolver==1.4.8
+Mako==1.3.10
+MarkupSafe==3.0.2
+matplotlib==3.10.3
+matplotlib-inline==0.1.7
+mpmath==1.3.0
+networkx==3.5
+numpy==2.2.6
+packaging==25.0
+parso==0.8.4
+pdfminer.six==20250327
+pdfplumber==0.11.6
+pillow==11.2.1
+prompt_toolkit==3.0.51
+proto-plus==1.26.1
+protobuf==5.29.5
+psycopg2-binary==2.9.10
+pure_eval==0.2.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.22
+pydantic==2.11.5
+pydantic_core==2.33.2
+Pygments==2.19.1
+PyJWT==2.10.1
+pyparsing==3.2.3
+pypdfium2==4.30.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.3
+rsa==4.9.1
+safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.15.3
+sentence-transformers==4.1.0
+setuptools==80.9.0
+six==1.17.0
+SQLAlchemy==2.0.41
+stack-data==0.6.3
+sympy==1.14.0
+threadpoolctl==3.6.0
+tokenizers==0.21.1
+torch==2.7.1
+torchaudio==2.7.1
+torchvision==0.22.1
+tqdm==4.67.1
+traitlets==5.14.3
+transformers==4.52.4
+typing-inspection==0.4.1
+typing_extensions==4.14.0
+uritemplate==4.2.0
+urllib3==2.4.0
+wcwidth==0.2.13
+Werkzeug==3.1.3
